# fsquirrel

./: Cargo.toml  Makefile  README.md
.github/workflows/: build.yml
src/: iter_windows.rs  lib.rs
tests/: test.rs
