[package]
name = "fsquirrel"
authors = ["Finn Bear"]
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/finnbear/fsquirrel/"
description = "fsquirrel is a cross-platform get/set extended file attributes"

[dependencies]

[dev-dependencies]
tempfile = "3.20.0"

[target.'cfg(unix)'.dependencies]
xattr = "1.5.0"
